<resources>
<string name="app_name">AIRS</string>
<string name="Copyright">&#169; 2004-2006 Nokia Corp.\n&#169; 2008-2012 Dirk Trossen; \n&#169; 2013-2014 TecVis LP
\n\nContact: dot@tecvis.co.uk
\n\nFollow Us on Twitter at @tecvis
\n\nFacebook: http://www.facebook.com/tecvisuk
\n\nManual: http://tecvis.co.uk/software-2/airs/
\n\nAIRS source code is licensed under LGPL 2.0 license and hosted on Github. For more information on license terms, review <b>license.txt</b>!
\n\nSpecial acknowledgment goes to Dana Pavel. Using AIRS for her research work (http://dalore.me.uk/Dana/research-areas) has provided many opportunities to introduce new features (such as event and mood button) as well as improve AIRS in terms of stability and features!
\n\nNOTE that the authors assume no responsibility for any potential misuse of this software for spying purposes. The operation is exposed through notification bar icons in order to make users aware of ongoing recordings!
</string>
<string name="tab_Record">Record</string>
<string name="tab_Config">Config</string>
<string name="tab_Sync">Sync</string>
<string name="tab_Visualise">Visualise</string>
<string name="main_About">About</string>
<string name="main_Sync">Synchronising Recordings</string>
<string name="Help">Help</string>
<string name="recording_prompt">Type of Recording</string>
<string name="main_Configure">General Settings</string>
<string name="main_Configure2">Set general application settings such as server IP, watchdog information and others.</string>
<string name="GeneralSettings">\'Server\' defines the address of the AIRS application server (must be public), followed by the port.\n\n
\'Local Display\' toggles the output of sensor values in local sensing\n\n
\'Local Storage\' switches the local storage on/off in local sensing. \n\n
\'Sensor History\' determines the number of sensor values being shown in the AIRS visualisations.\n\n
\'Wakeup\' only senses in local mode when there is any other (user) activity, i.e., it does not hold a wake-lock.\n\n
\'Reminder Interval\' defines the vibration and LED notification interval for the local sensing watchdog (0 switches the vibrate off)\n\n
\'Debug\' switches the debug output on/off. \n</string>
<string name="MapAbout">Shows a path of recent GPS recording. You can click on a marker for more information. You can center the map either on your current location or the last stored one (using the buttons on the top right). You can also switch between map or satellite view with the appropriate options menu item.</string>
<string name="ManualAbout">Shows the AIRS online manual.\nYou will need  Internet access for the page to show. You can click on links to various manual chapters like on any other webpage. Use the BACK key to navigate back to higher levels or exit the manual at the main level.</string>
<string name="RecordAbout">Start recording here, selecting the mode of recording you would like.\n\nYou can also load and delete <b>templates</b> that you stored as well as create shortcuts to a selected template on your launcher screen. Clicking on a template will automatically load the template.\n\nInstead of defining your own templates, you can also <b>download</b> examples from the TecVis server.</string>
<string name="LocalAbout">Shows the sensors available in local sensing mode.\nChoose the sensors you would like to record. Through the menu, you can select and unselect all sensors (for a clean sheet) as well as look at the sensor repository, giving you information on type, value ranges etc of the sensors that were discovered.</string>
<string name="ValuesAbout">Shows the current values of the sensors being read in local mode.\nFrom here, you can either <b>Exit</b> the program (and stop the service) or simply stop the display with the <b>BACK</b> key!\nYou can also <b>PAUSE</b> or <b>RESUME</b> the measurement threads (this does not stop the service but halts the recordings only).</string>
<string name="RemoteAbout">Shows the number of values and the bytes being sent in remote mode.\nFrom here, you can either <b>Exit</b> the program (and stop the service) or simply stop the display with the <b>BACK</b> key!</string>
<string name="MoodAbout">Select the mood you are currently in. Your selection is recorded with a timestamp in the <b>MO</b> sensor.\nExit the selector without selection by using the <b>BACK</b> key!\nYou can define your own mood entry in the text field at the bottom.</string>
<string name="EventAbout">Select the type of event you are currently in. Your selection is recorded with a timestamp in the <b>EB</b> sensor.\nExit the selector without selection by using the <b>BACK</b> key!\nYou can define your own event entry in the text field at the bottom. You can delete any entry by long clicking on it and confirming the deletion.\n\nAIRS stores your last defined events persistently.</string>
<string name="TimelineAbout">Shows a historical timeline of the sensor you just clicked on. You can change the number of historical values in the <b>General Settings</b>\nExit the timeline by using the <b>BACK</b> key!</string>
<string name="DBadminAbout">Choose any of the three DB actions, namely <b>Backup</b>, <b>Restore</b> or <b>Index</b>. You can only index the DB once and cannot undo the indexing after it is done.</string>
<string name="SyncAbout">Allows for sharing the data since the last synchronisation as a text file.\n\nYou can also manually set the last sync date, in case you need to re-sync periods.</string>
<string name="AdaptiveGPSAbout">This list shows you the most visited WiFi APs over a given period. Only APs that you have connected to will be shown here!</string>
<string name="HandlersList">Select the sensors you want to record as well as configure various available settings for the sensors! You can also configure <b>General Settings</b> for AIRS.</string>
<string name="Sensor_Selection">Sensor Selection</string>
<string name="HandlerDescription">Handler Image</string>
<string name="Online_Manual">Online Manual</string>
<string name="Yes">Yes</string>
<string name="No">No</string>
<string name="OK">OK</string>
<string name="Cancel">Cancel</string>
<string name="Select">Select</string>
<string name="Duration">Duration</string>
<string name="Getting_Started">Getting Started</string>
<string name="Getting_Started2">For local recording:\n
- select \'Lifelogging\' for lifelogging settings\n
- press \'Shortcut\' to place a shortcut on your launcher homescreen\n
- place AIRS event and mood widgets on your homescreen for annotations\n
- adjust settings as you like, e.g., adding WiFi hotspots to your adaptive GPS list!\n
- start \'AIRS local\' recording from your launcher screen with the created shortcut!\n
- for more complex visualisations of your recordings, download our Storica app at http://play.google.com/store/apps/details?id=com.storica\n
- for more information on recording, see http://tecvis.co.uk/software/storica/tips-for-recording\n\n
For remote recording, download the AIRS application server (see on our website) and read the AIRS online manual through the options menu\n
</string>
<string name="ConnectGoogle">Google Account</string>
<string name="ConnectGoogle2">Connect to Google Account for GDrive Backup</string>
<string name="ConnectGoogle3">Wait for connecting to your Google Account!</string>
<string name="ConnectGoogle4">Cannot find Google Account information on this device!</string>
<string name="ConnectGoogle5">You need to grant access for the upload function to work!</string>
<string name="FolderGoogle">Upload Folder</string>
<string name="CalendarHandlerUI_name">Calendar</string>
<string name="DeviceInfoHandlerUI_name">Device Information</string>
<string name="EnvironmentalSensorsHandlerUI_name">Environmental Sensors</string>
<string name="EventButtonHandlerUI_name">Event Button</string>
<string name="Select_template_and_action">Select Template and Action</string>
<string name="Delete">Delete</string>
<string name="Shortcut">Shortcut</string>
<string name="Download">Download</string>
<string name="DB_Admin">DB Admin</string>
<string name="Manual">Manual</string>
<string name="Rate">Rate AIRS</string>
<string name="General_Settings">AIRS General Settings</string>
<string name="Remote_Settings">AIRS Remote Settings</string>
<string name="Address_server">Address of your AIRS application server</string>
<string name="Server_name">Server name</string>
<string name="Port_server">Port of your AIRS application server</string>
<string name="Port_number">Port number</string>
<string name="Local_Settings">AIRS Local Settings</string>
<string name="Local_Display">Local Display</string>
<string name="Local_Display_on">Display sensor values you subscribed to</string>
<string name="Local_Display_off">Do not display sensor values, only number of values sensed</string>
<string name="Local_Storage">Local Storage</string>
<string name="Local_Storage_on">Store sensor values in internal SQLlite database</string>
<string name="Local_Storage_off">Do not store sensor values</string>
<string name="Wakeup">Wakeup</string>
<string name="Wakeup_on">Wakeup phone during sensing only when there is other user activity</string>
<string name="Wakeup_off">Keep wake lock to prevent sleeping</string>
<string name="Battery_kill">Battery Kill Condition [%]</string>
<string name="Battery_kill_on">Kill AIRS based on battery level to conserve some spare battery (0 = disable)</string>
<string name="Reminder_Settings">Reminder Settings</string>
<string name="Reminder_Interval">Reminder Interval [s]</string>
<string name="Reminder_Interval_on">Interval for reminder that AIRS is running (0 = disable)</string>
<string name="Vibrate">Vibrate</string>
<string name="Vibrate_on">Vibrate as a reminder</string>
<string name="Vibrate_off">Do not vibrate</string>
<string name="Lights">Lights</string>
<string name="Lights_on">Use notification LED as a reminder</string>
<string name="Lights_off">Do not use notification LED as a reminder</string>
<string name="Color_Code">LED Color</string>
<string name="Color_Code_on">Color of LED notification</string>
<string name="Debug">Debug</string>
<string name="Debug_on">Write debug messages in AIRS_debug.txt</string>
<string name="Debug_off">Do not debug anything</string>
<string name="Calendar_Selection">Calendar Selection</string>
<string name="Calendar_Selection_on">Choose the calendars that you want to have watched</string>
<string name="Calendar_Selection_title">Choose Calendars</string>
<string name="Orientation_Interval">Orientation Interval [s]</string>
<string name="Proximity_Interval">Proximity Interval [s]</string>
<string name="Proximity_Interval_on">Poll interval for proximity sensor in seconds</string>
<string name="System_Poll_Interval">System Poll Interval [s]</string>
<string name="System_Poll_Interval_on">Poll interval for system information like RAM, tasks, etc</string>
<string name="Sensor_Interval">Sensor Interval [s]</string>
<string name="Sensor_Interval_on">Poll interval for light and barometer sensor in seconds</string>
<string name="Weather_Interval">Weather Interval [min]</string>
<string name="Weather_Interval_on">Poll interval for weather update in minutes</string>
<string name="GPS_Accuracy">GPS Accuracy [m]</string>
<string name="GPS_Accuracy_on">Update weather when moved more than a certain distance (or always)</string>
<string name="GPS_Accuracy_title">Update Distance</string>
<string name="Event_Descriptions">Event Descriptions [1..50]</string>
<string name="Event_Descriptions_on">Maximum number of event descriptions to be stored</string>
<string name="Sort_Annotations">Sort Annotations</string>
<string name="Sort_Annotations_on">Sort annotation texts in list that shows after selecting the annotation widget</string>
<string name="Sort_Annotations_off">Do not sort annotation texts in list that shows after selecting the annotation widget</string>
</resources>