<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013, Dirk Trossen, airs@dirk-trossen.de

  This program is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License as published by
  the Free Software Foundation as version 2.1 of the License.

  This program is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  License for more details.

  You should have received a copy of the GNU Lesser General Public License
  along with this library; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
 -->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/EnvironmentalSensorsHandlerUI_name">
    <EditTextPreference
        android:summary="@string/Sensor_Interval_on"
		android:dialogIcon="@drawable/time"
        android:defaultValue="10"
        android:numeric="integer"
        android:title="@string/Sensor_Interval"
        android:key="PhoneSensorsHandler::EnvironmentalPoll"/>    
        
    <EditTextPreference
        android:summary="@string/Weather_Interval_on"
  		android:dialogIcon="@drawable/time"
        android:defaultValue="30"
        android:numeric="integer"
        android:title="@string/Weather_Interval"
        android:key="WeatherHandler::WeatherPoll"/>
    
    <ListPreference
    	android:dialogIcon="@drawable/location"
        android:key="WeatherHandler::LocationUpdate"
        android:title="@string/GPS_Accuracy"
        android:defaultValue="0"
        android:summary="@string/GPS_Accuracy_on"
        android:positiveButtonText="@string/Select"
        android:entries="@array/weatherhandler_values"
        android:entryValues="@array/weatherhandler_entries"
        android:dialogTitle="@string/GPS_Accuracy_title" />
</PreferenceScreen>
