<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013, Dirk Trossen, airs@dirk-trossen.de

  This program is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License as published by
  the Free Software Foundation as version 2.1 of the License.

  This program is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  License for more details.

  You should have received a copy of the GNU Lesser General Public License
  along with this library; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/button_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#ff000000"
            android:clickable="true"
            android:contentDescription="Recording"
            android:hapticFeedbackEnabled="true"
            android:onClick="onClick"
            android:src="@drawable/start_rectangular" />

        <Spinner
            android:id="@+id/spinner_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/recordinglabel_entries"
            android:prompt="@string/recording_prompt"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:text="@string/Select_template_and_action"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/templates_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:dividerHeight="1dp"
        android:fastScrollEnabled="true"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:stackFromBottom="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/templates_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/templates_shortcut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shortcut" />

        <Button
            android:id="@+id/templates_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Download" />
    </LinearLayout>

</LinearLayout>